[tool.poetry]
name = "CLI-Importer"
version = "1.0"
description = ""
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
packages = [{include = "cli_importer"}]

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
