[tool.poetry]
name = "CLI-Importer"
version = "2.0"
description = ""
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
packages = [{include = "cli_importer"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", tag = "v1.0" }
railway-route-generator = {git = "https://github.com/simulate-digital-rail/railway-route-generator", tag = "v4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
